force-app/main/default/objects/IncomeBenefits__c.object
<CustomObject>
    <fields>
        <fullName>OtherTANF__c</fullName>
        <label>Other TANF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Income Benefits</relationshipLabel>
        <relationshipName>Income_Benefits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PensionAmount__c</fullName>
        <label>Pension Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pension__c</fullName>
        <label>Pension</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrivateDisabilityInsuranceAmount__c</fullName>
        <label>Private Disability Insurance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrivateDisabilityInsurance__c</fullName>
        <label>Private Disability Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrivatePay__c</fullName>
        <label>Private Pay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <label>Program Enrollment</label>
        <referenceTo>ProgramEnrollment</referenceTo>
        <relationshipName>Income_and_Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RyanWhiteMedDent__c</fullName>
        <description>Receiving Ryan White-funded Medical or Dental Assistance</description>
        <label>Ryan White Med or Dent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCHIP__c</fullName>
        <description>State Children&apos;s Health Insurance Program</description>
        <label>SCHIP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SNAP__c</fullName>
        <label>SNAP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSDIAmount__c</fullName>
        <label>SSDIAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSDI__c</fullName>
        <label>Social Security Disability Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSIAmount__c</fullName>
        <label>SSI Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSI__c</fullName>
        <label>Supplemental Security Income (SSI)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SocSecRetirementAmount__c</fullName>
        <label>Soc Sec Retirement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SocSecRetirement__c</fullName>
        <label>Soc Sec Retirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StateHealthIns__c</fullName>
        <label>State Health Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TANFAmount__c</fullName>
        <label>TANF Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TANFChildCare__c</fullName>
        <label>TANF Child Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TANFTransportation__c</fullName>
        <label>TANF Transportation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TANF__c</fullName>
        <label>TANF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalMonthlyIncome__c</fullName>
        <formula>AlimonyAmount__c + ChildSupportAmount__c + EarnedAmount__c + GeneralAssistanceAmount__c + OtherIncomeSourceAmount__c + PensionAmount__c + PrivateDisabilityInsuranceAmount__c + SocSecRetirementAmount__c + SSDIAmount__c + SSIAmount__c + TANFAmount__c + UnemploymentAmount__c + VADisabilityServiceAmount__c +  VADisabilityNonServiceAmount__c + WorkersCompensationAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnemploymentAmount__c</fullName>
        <label>Unemployment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unemployment__c</fullName>
        <label>Unemployment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VADisabilityNonServiceAmount__c</fullName>
        <label>VA Disability Non Service Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VADisabilityNonService__c</fullName>
        <label>VA Disability Non Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VADisabilityServiceAmount__c</fullName>
        <label>VA Disability Service Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VADisabilityService__c</fullName>
        <label>VA Disability Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VHAServices__c</fullName>
        <label>VHA Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WIC__c</fullName>
        <description>Special Supplemental Nutrition Program for Women, Infants and Children (WIC)</description>
        <label>WIC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkersCompensationAmount__c</fullName>
        <label>Worker&apos;s Compensation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WorkersCompensation__c</fullName>
        <label>Worker&apos;s Compensation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <label>Income Benefits</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Income and Benefits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Income Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>